Fixing alignment, font, etc.

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   font-family: 'Crete Round', serif;
   color: #333;
 }
+
 section .in {
   max-width:75%;
   margin:0px auto 0px;
@@ -17,15 +18,41 @@ section .in {
   overflow:auto;
 }
 section#head {
+    width: 1000px;
+    margin: 0 auto;
+    margin-top: 25px;
 }
 section#head .in {
   padding-bottom:0;
   padding-top:40px;
   position:relative;
   overflow:hidden;
+  margin: 0 auto;
+}
+
+.left{
+    width: 500px;
+    float: left;
+}
+.left h2{
+    padding: 0 !important;
+    margin: 0 0 20px -18px; !important;
+    clear: both;
+    width: 100%;
+}
+.left .blurb{
+    width: 100%;
+    
+}
+
+.right {
+    width: 200px;
+    float: left;
+    
 }
 section#paper { 
   background:#ffa;
+  clear: both;
 }
 section#export {
   background:#eee;
@@ -36,19 +63,36 @@ section#export {
   min-width:350px;
   float:left;
 }
+/*#logo {
+  background:transparent url(../img/LocalDataLogo3-02.png) no-repeat left top;
+  width:200%;
+  margin-bottom:0px;
+  float:left;
+  height:200px;
+  padding:2%;
+}*/
+
 #signup {
-  background:transparent url(../img/streetscape_blur-01.jpg) no-repeat left top;
+  background:#ffa;
   width:40%;
   float:right;
-  margin-top:10px;
-  height:350px;
+  margin-top:10%;
+  margin-bottom: 10%;
+  height:300px;
   padding:2%;
-  color:#ffa;
+  color:#333;
+}
+
+#signup h2 {
+    padding-top:10%;
+    padding-bottom:10%;
+    font-size:4em;
+    font-family: 'Pacifico', serif;
 }
 
 #process {
-  background:#000;
-  color:#ffa;
+  background:#ffa;
+  color:black;
 }
 #process a {
   color:#5adbff;
@@ -59,33 +103,37 @@ section#export {
   margin-bottom:2em;
 }
   h2, h3 {
-  font-size:3em;
+  font-size:2em;
   font-weight:normal;
 }
 h1 {
     font-size:5em;
+    font-style: italic;
     color: #3f5c88;
     padding-bottom:30px;
 }
+
+#mast h2 {
+    font-style: italic;
+}
 #mast h1, #mast h2, #mast h3 {
-  width:75%;
+  width:40%;
   min-width:350px;
   text-align:left;
 }
 #mast h3 {
   margin-top:1em;
 }
+
 #head h1 { 
-  margin-top:3em;
-  float:left;
-  width:50%;
+  margin-top:2em;
 }
 h2, h3 {
-  width: 75%;
   margin:0 0 .5em 0;
 }
 h2 {
-  font-size:2em;
+  font-size:1.5em;
+  width: 45%
 }
 h3 {
   font-size:1.5em;
@@ -100,6 +148,9 @@ hr {
   border:0;
   border-bottom:1px dotted #aaa;
   margin:20px 0;
+}
+.navigation-link {
+    font-size:1.5em;
 }
 nav {
   background:#eee;
@@ -117,7 +168,6 @@ nav ul {
   text-align:center;
   max-width:960px;
   margin:0px;
-  
 }
 nav li {
   display:inline;
